--- a/views/editFilm.ejs
+++ b/views/editFilm.ejs
@@ -78,6 +78,6 @@
             </form>
         </div>
     </div>
-    <%- include('partials/script.js')%>
+    <%- include('partials/scripts.ejs')%>
 </body>
 </html>
