--- a/views/login.ejs
+++ b/views/login.ejs
@@ -24,6 +24,6 @@
             </form>
         </div>
     </div>
-    <%- include('partials/script.js')%>
+    <%- include('partials/scripts.ejs')%>
 </body>
 </html>
