--- a/views/register.ejs
+++ b/views/register.ejs
@@ -32,6 +32,6 @@
             </form>
         </div>
     </div>
-    <%- include('partials/script.js')%>
+    <%- include('partials/scripts.ejs')%>
 </body>
 </html>
