add project 12 part 1 (I'll watch)

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -64,9 +64,10 @@
                             <div class="film-rate">
                                 <p>7.3</p>
                             </div>
-                            <button class="film-btn">
+                            <button class="film-btn" onclick="deleteFromToWatch('<%=film._id%>')">
                                 <img src="/images/icons/saved.png" alt="">
                                 Cохранено
+                
                             </button>
                         </div>
                     </div>                        
