--- a/views/index.ejs
+++ b/views/index.ejs
@@ -68,6 +68,15 @@
                 <%
                     })
                 %>
+                <div class="pages">
+                    <%
+                            for(let i = 0; i < pages; i++){
+                    %>
+                            <a href="?page=<%=i%>"><%=i + 1%></a>
+                    <%
+                            }
+                    %>
+                </div>
             </div>
         </div>
     </div>
