add project 15 (rates, comment)

--- a/public/style/componets/comments.css
+++ b/public/style/componets/comments.css
@@ -2,13 +2,14 @@
     font-size: 20px;
     font-weight: 700;
 }
-.comment-starts{
+.comment-stars{
     display: flex;
     gap: 10px;
 }
-.comment-starts img{
+.comment-stars img{
     width: 30px;
     filter: grayscale(100%);
+    z-index: 0;
 }
 .add-comment-form{
     margin-top: 30px;
@@ -34,6 +35,22 @@
 .add-comment-form p{
     margin: 10px 0;
 }
-.comments p{
+.comments > p{
     margin-top: 20px;
+}
+.active-star{
+    filter: grayscale(0%) !important;
+}
+
+.comment{
+    margin: 20px 0;
+    border: 1px solid #00000039;
+    border-radius: 10px;
+    padding: 15px;
+}
+.comment a{
+        text-decoration: none;
+}
+.comment p{
+    margin: 15px 0;
 }
