--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -47,7 +47,11 @@
                     <div class="film-details">
                         <p>Время</p>
                         <p><%=film.time%>мин</p>                   
-                    </div>        
+                    </div>   
+                    <div class="film-details">
+                        <p>Рейтинг</p>
+                        <p><%=averageRate%></p>
+                    </div>     
                 </div>
             </div>
             <% 
@@ -62,18 +66,20 @@
             <div class="comments">
                 <h3>Коментарий</h3>
                 <% if(user && user._id){%>
-                    <form action="" class="add-comment-form">
+                    <form  class="add-comment-form" onsubmit="sendRate(event)">
                         <p>Оцените фильм</p>
-                        <div class="comment-starts">
-                            <img src="/images/icons/star.svg" alt="">
-                            <img src="/images/icons/star.svg" alt="">
-                            <img src="/images/icons/star.svg" alt="">
-                            <img src="/images/icons/star.svg" alt="">
-                            <img src="/images/icons/star.svg" alt="">
+                        <div class="comment-stars">
+                            <img onclick="rateFilm(1)" src="/images/icons/star.svg" alt="">
+                            <img onclick="rateFilm(2)" src="/images/icons/star.svg" alt="">
+                            <img onclick="rateFilm(3)" src="/images/icons/star.svg" alt="">
+                            <img onclick="rateFilm(4)" src="/images/icons/star.svg" alt="">
+                            <img onclick="rateFilm(5)" src="/images/icons/star.svg" alt="">
                         </div>
                         <p>Напишите коментарий</p>
-                        <textarea name="text"></textarea>
-                        <button>Сохранить</button>
+                        <textarea id="comment-text"></textarea>
+                        <input type="hidden" value="<%=user._id%>" id="comment_author">
+                        <input type="hidden" value="<%=film._id%>" id="comment_film">
+                        <button type="submit">Сохранить</button>
                     </form>
                 <%}else{%>
                     <p>
@@ -84,6 +90,40 @@
                     </p>
                 <%
                     }   
+                %>
+                <%
+                    if(rates){
+                        rates.forEach(rate => {     
+                %>
+                        <div class="comment">
+                            <p>Автор: <a href=""><%=rate.authorId.full_name%></a></p>
+                            <div class="comment-stars">
+                                <%
+                                    for(let i = 0; i < 5; i++){
+                                        if(i < rate.rate){
+                                %>
+                                            <img class="active-star" src="/images/icons/star.svg" alt="">
+                                <%
+                                        }else{
+                                %>
+                                            <img src="/images/icons/star.svg" alt="">
+                                <%
+                                        }
+                                    }
+                                %>                
+                                <!-- <img onclick="rateFilm(1)" src="/images/icons/star.svg" alt="">
+                                <img onclick="rateFilm(2)" src="/images/icons/star.svg" alt="">
+                                <img onclick="rateFilm(3)" src="/images/icons/star.svg" alt="">
+                                <img onclick="rateFilm(4)" src="/images/icons/star.svg" alt="">
+                                <img onclick="rateFilm(5)" src="/images/icons/star.svg" alt=""> -->
+                            </div>
+                            <% if(rate.text.length > 0){%>
+                                <p>Коментарий: <%=rate.text%></p>   
+                            <%}%>                         
+                        </div>
+                <%
+                        })
+                    }
                 %>
             </div>
         </div>
