--- a/views/partials/scripts.ejs
+++ b/views/partials/scripts.ejs
@@ -1,3 +1,4 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.6/axios.min.js" integrity="sha512-06NZg89vaTNvnFgFTqi/dJKFadQ6FIglD6Yg1HHWAUtVFFoXli9BZL4q4EO1UTKpOfCfW5ws2Z6gw49Swsilsg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="/js/deleteFilm.js"></script>
 <script src="/js/saveFilm.js"></script>
+<script src="/js/rateFilm.js"></script>
