add project 17(serial, series)

--- a/public/style/all.css
+++ b/public/style/all.css
@@ -8,3 +8,4 @@
 @import url('pages/admin.css');
 @import url('pages/detail.css');
 @import url('componets/comments.css');
+@import url('componets/serial.css');
