add project 9 part 3-4, project 10 part 1-2 (user view/edit/delete/block)

--- a/public/style/pages/admin.css
+++ b/public/style/pages/admin.css
@@ -13,8 +13,12 @@
 .film-btns a:first-child{
     background-color: yellow;
 }
-.film-btns a:last-child{
+.film-btns a:nth-child(2){
     background-color: red;
+    color: #fff;
+}
+.film-btns a:last-child{
+    background-color: gray;
     color: #fff;
 }
 .add-btn{
