--- a/views/partials/scripts.ejs
+++ b/views/partials/scripts.ejs
@@ -4,3 +4,4 @@
 <script src="/js/rateFilm.js"></script>
 <script src="/js/serial.js"></script>
 <script src="/js/deleteRate.js"></script>
+<script src="/js/deleteUsers.js"></script>
